Avukat detaylarında yeni çalışma alanları girildi Avukat filtre TR karakter sorun giderildi

--- a/emin-ulusoy.html
+++ b/emin-ulusoy.html
@@ -74,7 +74,8 @@
             <div class="card-faaliyet">
               <ul>
                   <li>İcra ve İflas Hukuku</li>
-                  <li>Ticaret Hukuku</li>
+                  <li>Borçlar Hukuku</li>
+                  <li>Aile Hukuku</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
@@ -86,7 +87,7 @@
         <div class="col-md-8 avukat-detay">
           <a class="anchor" id="avukatdetay"></a>
           <h2 class="fw-bold mb-5">AVUKAT HAKKINDA</h2>
-          <p>İstanbul Üniversitesi Hukuk Fakültesi'nden 2019 Yılı Haziran ayında "Yüksek Onur Derecesi" ile bölüm 4.sü olarak mezun olan Avukat Emin Ulusoy, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2020 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosunda Avukat olarak katılan Avukat Emin Ulusoy, başta İcra ve iflas hukuku, Ticaret Hukuku, Deniz Ticaret Hukuku ve İcra İflas Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
+          <p>İstanbul Üniversitesi Hukuk Fakültesi'nden 2019 Yılı Haziran ayında "Yüksek Onur Derecesi" ile bölüm 4.sü olarak mezun olan Avukat Emin Ulusoy, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2020 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosunda Avukat olarak katılan Avukat Emin Ulusoy, başta İcra ve iflas hukuku, Borçlar Hukuku ve Aile Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
 
             <p>Avukat Emin Ulusoy güçlü akademik bilgi birikimi ile Avukatlık ve hukuki danışmanlık hizmeti vermekte olup, faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
         </div>
