--- a/erdal-hacioglu.html
+++ b/erdal-hacioglu.html
@@ -75,6 +75,7 @@
               <ul>
                   <li>Ceza Hukuku</li>
                   <li>İdare Hukuku</li>
+                  <li>Bilişim Hukuku</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
@@ -86,11 +87,11 @@
         <div class="col-md-8 avukat-detay">
           <a class="anchor" id="avukatdetay"></a>
           <h2 class="fw-bold mb-5">AVUKAT HAKKINDA</h2>
-          <p>2000 yılında Marmara Üniversitesi Hukuk Fakültesi'nden mezun olan Avukat Serkan Kartal,  yasal avukatlık stajını tamamlamasını müteakip, İstanbul Barosuna kayıtlı avukat olarak Kulaçoğlu Hukuk Bürosu‘nda çalışmaya başlamıştır. Avukat Serkan Kartal hali hazırda Kulaçoğlu Hukuk Bürosunda Yönetici – Ortak Avukat olarak çalışmalarına devam etmektedir.</p>
+          <p>Avukat Erdal Hacıoğlu 2009 yılında Galatasaray Üniversitesi Hukuk Fakültesinden mezun olmuştur. Hacıoğlu, mezunu olduğu Galatasaray Üniversitesi’nde Kamu Hukuku alanında yüksek lisans eğitimi almıştır.</p>
 
-            <p>Serkan Kartal, özellikle Vergi Hukuku ve İdare Hukuku alanlarında yoğun çalışmalarda bulunmakta olup, bununla birlikte Ticaret Hukuku, Şirketler Hukuku ve İş Hukuku alanlarında da çalışmalarına halen devam etmektedir. Profesyonel futbol geçmişi nedeniyle spor ve spor hukuku ile ilgili özel çalışmaları da mevcuttur.</p>
+            <p>Avukat Erdal Hacıoğlu güçlü akademik bilgi birikimi ve mesleki tecrübesi ile avukatlık ve hukuki danışmanlık hizmeti vermekte olup, faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
             
-            <p>Avukat Serkan Kartal bilgi birikimi ve 20 yılı aşkın tecrübesi ile Avukatlık ve hukuki danışmanlık hizmeti vermekte ve faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
+          <p>Ağırlıklı olarak Ceza Hukuku Avukatı ve İdare Hukuku Avukatı olarak çalışmakta olan Hacıoğlu, iyi derecede İngilizce ve Fransızca bilmektedir.</p>
         </div>
         <div class="col-md-4">
           <a class="anchor" id="musaitlik-takvimi"></a>
