--- a/erencan-cemrek.html
+++ b/erencan-cemrek.html
@@ -73,9 +73,10 @@
           <div class="col-md-5">
             <div class="card-faaliyet">
               <ul>
-                  <li>İş Hukuku</li>
-                  <li>Ticaret Hukuku</li>
-                  <li>Sözleşmeler Hukuku</li>
+                <li>Ticaret Hukuku</li>
+                <li>Borçlar Hukuku</li>
+                <li>Sözleşmeler Hukuku</li>
+                <li>Tüketici Hukuku</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
@@ -87,7 +88,7 @@
         <div class="col-md-8 avukat-detay">
           <a class="anchor" id="avukatdetay"></a>
           <h2 class="fw-bold mb-5">AVUKAT HAKKINDA</h2>
-          <p>İstanbul Üniversitesi Hukuk Fakültesi’nden 2019 yılı Temmuz ayında “Yüksek Onur Derecesi” ile mezun olan Avukat Erencan Çemrek, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2020 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosuna Avukat olarak katılan Avukat Erencan Çemrek, başta Ticaret Hukuku, İş Hukuku, ve Gayrimenkul Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
+          <p>İstanbul Üniversitesi Hukuk Fakültesi’nden 2019 yılı Temmuz ayında “Yüksek Onur Derecesi” ile mezun olan Avukat Erencan Çemrek, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2020 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosuna Avukat olarak katılan Avukat Erencan Çemrek, başta Ticaret Hukuku, Borçlar Hukuku, ve Sözleşmeler Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
 
             <p>Avukat Erencan Çemrek güçlü akademik bilgi birikimi ile Avukatlık ve hukuki danışmanlık hizmeti vermekte olup, faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
         </div>
