--- a/serkan-kartal.html
+++ b/serkan-kartal.html
@@ -73,9 +73,10 @@
           <div class="col-md-5">
             <div class="card-faaliyet">
               <ul>
-                  <li>İdare Hukuku</li>
-                  <li>Vergi Hukuku</li>
-                  <li>İş Hukuku</li>
+                <li>İş Hukuku</li>
+                <li>Vergi Hukuku</li>
+                <li>İdare Hukuku</li>
+                <li>Arabuluculuk ve Uzlaşma</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
@@ -89,7 +90,7 @@
           <h2 class="fw-bold mb-5">AVUKAT HAKKINDA</h2>
           <p>2000 yılında Marmara Üniversitesi Hukuk Fakültesi'nden mezun olan Avukat Serkan Kartal,  yasal avukatlık stajını tamamlamasını müteakip, İstanbul Barosuna kayıtlı avukat olarak Kulaçoğlu Hukuk Bürosu‘nda çalışmaya başlamıştır. Avukat Serkan Kartal hali hazırda Kulaçoğlu Hukuk Bürosunda Yönetici – Ortak Avukat olarak çalışmalarına devam etmektedir.</p>
 
-            <p>Serkan Kartal, özellikle Vergi Hukuku ve İdare Hukuku alanlarında yoğun çalışmalarda bulunmakta olup, bununla birlikte Ticaret Hukuku, Şirketler Hukuku ve İş Hukuku alanlarında da çalışmalarına halen devam etmektedir. Profesyonel futbol geçmişi nedeniyle spor ve spor hukuku ile ilgili özel çalışmaları da mevcuttur.</p>
+            <p>Serkan Kartal, özellikle Vergi Hukuku ve İdare Hukuku alanlarında yoğun çalışmalarda bulunmakta olup, bununla birlikte Ticaret Hukuku ve İş Hukuku alanlarında da çalışmalarına halen devam etmektedir. Profesyonel futbol geçmişi nedeniyle spor ve spor hukuku ile ilgili özel çalışmaları da mevcuttur.</p>
             
             <p>Avukat Serkan Kartal bilgi birikimi ve 20 yılı aşkın tecrübesi ile Avukatlık ve hukuki danışmanlık hizmeti vermekte ve faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
         </div>
