--- a/tamer-kulacoglu.html
+++ b/tamer-kulacoglu.html
@@ -73,9 +73,10 @@
           <div class="col-md-5">
             <div class="card-faaliyet">
               <ul>
-                  <li>Gayrimenkul Hukuku</li>
-                  <li>Miras Hukuku</li>
-                  <li>Ticaret Hukuku</li>
+                <li>Ticaret Hukuku</li>
+                <li>Borçlar Hukuku</li>
+                <li>Miras Hukuku</li>
+                <li>Gayrimenkul Hukuku</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
