--- a/umutcan-luleci.html
+++ b/umutcan-luleci.html
@@ -71,8 +71,9 @@
             <div class="card-faaliyet">
               <ul>
                   <li>Ticaret Hukuku</li>
-                  <li>Borçlar Hukuku</li>
-                  <li>Gayrimenkul Hukuku</li>
+                  <li>Deniz Ticaret Hukuku</li>
+                  <li>Marka ve Rekabet Hukuku</li>
+                  <li>İcra ve İflas Hukuku</li>
               </ul>
             </div>
             <a href="#musaitlik-takvimi" class="header-cta d-inline-block fw-bold">Hemen Randevu Al</a>
@@ -84,7 +85,7 @@
         <div class="col-md-8 avukat-detay">
           <a class="anchor" id="avukatdetay"></a>
           <h2 class="fw-bold mb-5">AVUKAT HAKKINDA</h2>
-          <p>İstanbul Üniversitesi Hukuk Fakültesi’nden 2021 yılı Haziran ayında “Yüksek Onur Derecesi” ile mezun olan Avukat Umutcan Lüleci, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2022 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosuna Avukat olarak katılan Avukat Umutcan Lüleci, halen İstanbul Üniversitesi Sosyal Bilimler Enstitüsü Özel Hukuk Yüksek Lisans Programı’nda eğitimine devam etmekte olup başta Ticaret Hukuku, Deniz Ticaret Hukuku, Kira ve Gayrimenkul Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
+          <p>İstanbul Üniversitesi Hukuk Fakültesi’nden 2021 yılı Haziran ayında “Yüksek Onur Derecesi” ile mezun olan Avukat Umutcan Lüleci, mezuniyetinin ardından Kulaçoğlu Hukuk Bürosu bünyesinde başladığı yasal avukatlık stajını 2022 yılında tamamlamıştır. Yasal stajını müteakip Kulaçoğlu Hukuk Bürosuna Avukat olarak katılan Avukat Umutcan Lüleci, halen İstanbul Üniversitesi Sosyal Bilimler Enstitüsü Özel Hukuk Yüksek Lisans Programı'nda eğitimine devam etmekte olup başta Ticaret Hukuku, Deniz Ticaret Hukuku ile Marka ve Rekabet Hukuku olmak üzere, hukukun önemli alanlarında çalışmalar yapmaktadır.</p>
           <p>Avukat Umutcan Lüleci güçlü akademik bilgi birikimi ile Avukatlık ve hukuki danışmanlık hizmeti vermekte olup, faaliyet gösterdiği çalışma alanlarında, müvekkillerinin hukuki sorunlarının, verimli ve doğru şekilde çözümlenmesini amaçlamaktadır.</p>
             
             <p>Öğrencilik döneminde birçok öğrenci kulübünde ve sivil toplum kuruluşunda aktif rol alan ve çeşitli üniversitelerin düzenlediği seminerlere katılan Lüleci, hukukun farklı alanlarındaki çalışmalarını sürdürmektedir.</p>
